[package]
name = "katrust"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "katyusha"
path = "src/main.rs"
