[package]
name = "streamer"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = { version = "1.7.0", features = ["full"]  }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.125"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"



[lib]
name = "cmd"
path = "src/publisher/lib.rs"


[[bin]]
name = "publisher"
path = "src/publisher/main.rs"


[[bin]]
name = "subscriber"
path = "src/subscriber/main.rs"


[[bin]]
name = "botter"
path = "src/botter/main.rs"