[package]
name = "botter"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
tokio = { version = "1.7.0", features = ["full"]  }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.125"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.4.3"
pretty_env_logger = "0.4.0"
scrap = "0.5"
repng = "0.2.2"



[lib]
name = "cmd"
path = "src/lib.rs"



[[bin]]
name = "botter"
path = "src/main.rs"